Adicionada página para seleção da visualização dos arquivos das edições

--- a/templates/pagina_base.html
+++ b/templates/pagina_base.html
@@ -23,10 +23,10 @@
                         <a href="/">Página Inicial</a>
                     </li>
                     <li>
-                        <a href="/anteriores">Anteriores</a>
+                        <a href="/anteriores/">Anteriores</a>
                     </li>
                     <li>
-                        <a href="/">Fotos</a>
+                        <a href="/arquivos/">Fotos & etc.</a>
                     </li>
                     <li>
                         <a href="/contato/">Contato</a>
