--- a/techtalks/templates/arquivos.html
+++ b/techtalks/templates/arquivos.html
@@ -24,11 +24,11 @@
                 </div>
             </div>
             <div id="outros_arquivos">
-                <div class="titulo">Vídeos</div>
+                <div class="titulo">Vídeos e Slides</div>
                 <div class="outros_arquivos">
                     <ul id="edicoes_realizadas">
                         {%for edicao_realizada in edicoes_realizadas%}
-                            <li><a href="{% url techtalks.views.videos_edicao edicao_realizada.id %}">{{edicao_realizada.id}}ª Edição - {{ edicao_realizada.data|date:"d/m/Y" }}</a></li>
+                            <li><a href="{% url techtalks.views.videos_e_slides_da_edicao edicao_realizada.id %}">{{edicao_realizada.id}}ª Edição - {{ edicao_realizada.data|date:"d/m/Y" }}</a></li>
                         {%endfor%}
                     </ul>
                     {% paginate %}
