--- a/techtalks/templates/arquivos.html
+++ b/techtalks/templates/arquivos.html
@@ -36,6 +36,6 @@
             </div>
         </div>
     {% else %}
-        <h1>Ainda não existem edições edicoes_realizadas.</h1>
+        <h1>Ainda não existem edições realizadas.</h1>
     {% endif %}
 {% endblock conteudo %}
