--- a/site_media/estilo/techtalks/videos_e_slides_da_edicao.css
+++ b/site_media/estilo/techtalks/videos_e_slides_da_edicao.css
@@ -1,11 +1,11 @@
 #arquivos {
-    padding: 7px;
+    /*padding: 7px;*/
     margin-top: -20px;
 }
 
 .titulo {
     margin-top: 10px;
-    margin-right: 10px;
+    /*margin-right: 10px;*/
     height: 25px;
     position: relative;
     top: 5px;
@@ -20,16 +20,21 @@
 	z-index: 1;
 }
 
-.video_e_slide {
-    margin-right: 10px;
+.video_e_slide_container {
+    /*margin-right: 10px;*/
     margin-bottom: 10px;
     padding-right: 3px;
     padding-top: 10px;
+    /*padding-left: 5%;*/
     border: 1px solid #00923f;
     -moz-border-radius:4px;
 	-khtml-border-radius:4px;
 	-webkit-border-radius:4px;
 	border-radius:4px;
+}
+
+.video_e_slide {
+    margin:0 auto;
 }
 
 .video {
