--- a/techtalks/templates/videos_e_slides_da_edicao.html
+++ b/techtalks/templates/videos_e_slides_da_edicao.html
@@ -12,14 +12,16 @@
     <div id="arquivos">
         {% for palestra in palestras %}
             <div class="titulo">{{ palestra.titulo }}</div>
-            <div class="video_e_slide">
-                <div class="video">
-                    {{ palestra.listar_videos.0.retornar_embed|safe }}
-                </div>
-                <div class="slide_div">
-                    <div class="slide">{{ palestra.retornar_slide_embeded.0|safe }}</div>
-                    <div class="slide_url">
-                        <a href="{{ palestra.retornar_slide_embeded.1 }}">Link da apresentaçao no Slideshare</a>
+            <div class="video_e_slide_container">
+                <div class="video_e_slide">
+                    <div class="video">
+                        {{ palestra.listar_videos.0.retornar_embed|safe }}
+                    </div>
+                    <div class="slide_div">
+                        <div class="slide">{{ palestra.retornar_slide_embeded.0|safe }}</div>
+                        <div class="slide_url">
+                            <a href="{{ palestra.retornar_slide_embeded.1 }}">Link da apresentaçao no Slideshare</a>
+                        </div>
                     </div>
                 </div>
             </div>
