--- a/templates/pagina_base.html
+++ b/templates/pagina_base.html
@@ -11,51 +11,53 @@
         {% endblock scripts %}
     </head>
     <body>
-        <div class="topo">
-            <div class="logo">
-                <a href="/">
-                    <img src="{{ MEDIA_URL }}/imagens/logo.png" alt="NSI TECH TALKS" title="NSI TECH TALKS"/>
-                </a>
-            </div>
-            <div class="navegacao">
-                <ul id="navegacao">
-                    <li id="principal">
-                        <a href="/">Página Inicial</a>
-                    </li>
-                    <li>
-                        <a href="/anteriores/">Anteriores</a>
-                    </li>
-                    <li>
-                        <a href="/arquivos/">Fotos & etc.</a>
-                    </li>
-                    <li>
-                        <a href="/contato/">Contato</a>
-                    </li>
-                    <li>
-                        <a href="/equipe/">Equipe</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="conteudo">
-            {% block conteudo %}
-
-            {% endblock conteudo %}
-        </div>
-        <div class="rodape">
-            <div class="infos">
-                <div>
-                    NSI - Instituto Federal Fluminense - Núcleo de Pesquisa em Sistemas de Informação
+        <div class="corpo">
+            <div class="topo">
+                <div class="logo">
+                    <a href="/">
+                        <img src="{{ MEDIA_URL }}/imagens/logo.png" alt="NSI TECH TALKS" title="NSI TECH TALKS"/>
+                    </a>
                 </div>
-                <div class="links_rodape">
-                    <a href="/equipe/">Equipe NSI</a> |
-                    <a href="/">Equipe do Site</a>
+                <div class="navegacao">
+                    <ul id="navegacao">
+                        <li id="principal">
+                            <a href="/">Página Inicial</a>
+                        </li>
+                        <li>
+                            <a href="/anteriores/">Anteriores</a>
+                        </li>
+                        <li>
+                            <a href="/arquivos/">Fotos & etc.</a>
+                        </li>
+                        <li>
+                            <a href="/contato/">Contato</a>
+                        </li>
+                        <li>
+                            <a href="/equipe/">Equipe</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="selo_django_powered">
-                <a href="http://www.djangoproject.com/">
-                    <img src="{{ MEDIA_URL }}/imagens/djangopowered126x54.gif" style="border:0;width:100px;height:43px" alt="Powered by Django." title="Powered by Django." />
-                </a>
+            <div class="conteudo">
+                {% block conteudo %}
+    
+                {% endblock conteudo %}
+            </div>
+            <div class="rodape">
+                <div class="infos">
+                    <div>
+                        NSI - Instituto Federal Fluminense - Núcleo de Pesquisa em Sistemas de Informação
+                    </div>
+                    <div class="links_rodape">
+                        <a href="/equipe/">Equipe NSI</a> |
+                        <a href="/">Equipe do Site</a>
+                    </div>
+                </div>
+                <div class="selo_django_powered">
+                    <a href="http://www.djangoproject.com/">
+                        <img src="{{ MEDIA_URL }}/imagens/djangopowered126x54.gif" style="border:0;width:100px;height:43px" alt="Powered by Django." title="Powered by Django." />
+                    </a>
+                </div>
             </div>
         </div>
     </body>
