--- a/templates/pagina_base.html
+++ b/templates/pagina_base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt-br" lang="pt-br">
     <head>
-        <title>..:: NSI TECH TALKS - {% block titulo_pagina %}{% endblock titulo_pagina%} ::..</title>
+        <title>NSI TECH TALKS - {% block titulo_pagina %}{% endblock titulo_pagina%}</title>
         <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL}}/estilo/estilo_base.css"/>
         {% block estilo_extra %}
         {% endblock estilo_extra %}
@@ -11,53 +11,50 @@
         {% endblock scripts %}
     </head>
     <body>
-        <div class="corpo">
-            <div class="topo">
-                <div class="logo">
-                    <a href="/">
-                        <img src="{{ MEDIA_URL }}/imagens/logo.png" alt="NSI TECH TALKS" title="NSI TECH TALKS"/>
-                    </a>
+        <div id="topo">
+            <div id="logo">
+                <a href="/">
+                    <img src="{{ MEDIA_URL }}/imagens/logo.png" alt="NSI TECH TALKS" title="NSI TECH TALKS"/>
+                </a>
+            </div>
+            <div class="navegacao">
+                <ul id="navegacao">
+                    <li id="principal">
+                        <a href="/">Página Inicial</a>
+                    </li>
+                    <li>
+                        <a href="/anteriores/">Anteriores</a>
+                    </li>
+                    <li>
+                        <a href="/arquivos/">Fotos & etc.</a>
+                    </li>
+                    <li>
+                        <a href="/contato/">Contato</a>
+                    </li>
+                    <li>
+                        <a href="/equipe/">Equipe</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div id="conteudo">
+            {% block conteudo %}
+            {% endblock conteudo %}
+        </div>
+        <div id="rodape">
+            <div id="infos">
+                <div>
+                    NSI - Instituto Federal Fluminense - Núcleo de Pesquisa em Sistemas de Informação
                 </div>
-                <div class="navegacao">
-                    <ul id="navegacao">
-                        <li id="principal">
-                            <a href="/">Página Inicial</a>
-                        </li>
-                        <li>
-                            <a href="/anteriores/">Anteriores</a>
-                        </li>
-                        <li>
-                            <a href="/arquivos/">Fotos & etc.</a>
-                        </li>
-                        <li>
-                            <a href="/contato/">Contato</a>
-                        </li>
-                        <li>
-                            <a href="/equipe/">Equipe</a>
-                        </li>
-                    </ul>
+                <div id="links_rodape">
+                    <a href="/equipe/">Equipe NSI</a> |
+                    <a href="/">Equipe do Site</a>
                 </div>
             </div>
-            <div class="conteudo">
-                {% block conteudo %}
-    
-                {% endblock conteudo %}
-            </div>
-            <div class="rodape">
-                <div class="infos">
-                    <div>
-                        NSI - Instituto Federal Fluminense - Núcleo de Pesquisa em Sistemas de Informação
-                    </div>
-                    <div class="links_rodape">
-                        <a href="/equipe/">Equipe NSI</a> |
-                        <a href="/">Equipe do Site</a>
-                    </div>
-                </div>
-                <div class="selo_django_powered">
-                    <a href="http://www.djangoproject.com/">
-                        <img src="{{ MEDIA_URL }}/imagens/djangopowered126x54.gif" style="border:0;width:100px;height:43px" alt="Powered by Django." title="Powered by Django." />
-                    </a>
-                </div>
+            <div id="selo_django_powered">
+                <a href="http://www.djangoproject.com/">
+                    <img src="{{ MEDIA_URL }}/imagens/djangopowered126x54.gif" style="border:0;width:100px;height:43px" alt="Powered by Django." title="Powered by Django." />
+                </a>
             </div>
         </div>
     </body>
