atualizada a lista da equipe

--- a/techtalks/templates/equipe.html
+++ b/techtalks/templates/equipe.html
@@ -19,7 +19,7 @@
 <div class="titulo_equipe">Quali</div>
 <div class="equipe">
     <div class="membro">Rodrigo Manhães</div>
-    <div class="membro">Gustavo Guimarães Rezende</div>
+    <div class="membro">Vanderson Mota dos Santos</div>
     <div class="membro">Hugo Lopes Tavares</div>
     <div class="membro">Marianna Siqueira Reis</div>
     <div class="membro">Rebeca Campos Motta</div>
@@ -28,7 +28,6 @@
 <div class="titulo_equipe">Serviços</div>
 <div class="equipe">
     <div class="membro">Fernando Luiz de Carvalho e Silva</div>
-    <div class="membro">Gabriel Manhães Monnerat</div>
     <div class="membro">Eduardo Ferreira</div>
     <div class="membro">Douglas Oliveira Camata</div>
 </div>
@@ -39,10 +38,11 @@
     <div class="membro">Tiago Samaha Cordeiro</div>
     <div class="membro">Gabriel Lima de Oliveira</div>
     <div class="membro">Ângelo Otávio Nuffer Nunes</div>
-    <div class="membro">Rômulo dos Santos Correia</div>
+    <div class="membro">Rômulo dos Santos Corrêa Machado</div>
     <div class="membro">Mário Jorge Valle do Amaral</div>
     <div class="membro">Priscila Manhães da Silva</div>
     <div class="membro">Sarah Marques</div>
+    <div class="membro">Felipe Norato</div>
 </div>
 
 <div class="fomentador">CNPq</div>
@@ -50,6 +50,7 @@
 <div class="titulo_equipe">Iniciação Científica</div>
 <div class="equipe">
     <div class="membro">Whanderley Souza Freitas - Projeto: Segmentação de Vídeo</div>
+    <div class="membro">João Felipe - Projeto: Segmentação de Vídeo</div>
     <div class="membro">Caio Rios de Souza - Projeto: ARGUS</div>
     <div class="membro">Gabriel Nascimento Marcos da Rocha - Projeto: ERP5</div>
     <div class="membro">Chaiana Layza do Nascimento Lima - Projeto: ERP5</div>
@@ -79,6 +80,7 @@
     <div class="membro">Maria da Graça Miranda - Pesquisadora Especialista do Minist&eacute;rio das Comunicaç&otilde;es</div>
     <div class="membro">Vinícius das Chagas Silva</div>
     <div class="membro">Rafael dos Santos Gonçalves</div>
+    <div class="membro">Dyogo Ribeiro Veiga</div>
 </div>
 
 <div class="fomentador">UFF</div>
@@ -96,5 +98,6 @@
 <div class="equipe">
     <div class="membro">Rafael  Manhães Monnerat</div>
     <div class="membro">Lucas Carvalho Teixeira</div>
+    <div class="membro">Gabriel Manhães Monnerat</div>
 </div>
 {% endblock conteudo %}
