Corrigido bug da exibição de vídeos e slides quando o id do slide fosse vazio

--- a/site_media/estilo/techtalks/videos_e_slides_da_edicao.css
+++ b/site_media/estilo/techtalks/videos_e_slides_da_edicao.css
@@ -35,7 +35,6 @@
     padding-bottom: 3px !important;
     padding-top: 2px !important;
     color:#00923f;
-    font-weight: bold;
     float: left;
     width: 360px;
 }
@@ -52,6 +51,11 @@
 
 .slide_url a {
     color:#00923f;
+}
+
+.sem_arquivo {
+    color: #00923f;
+    font-size: 20px;
 }
 
 .pagination {
