Adicionado logo do IFF ao rodapé da página.

--- a/templates/pagina_base.html
+++ b/templates/pagina_base.html
@@ -42,9 +42,14 @@
             {% endblock conteudo %}
         </div>
         <div id="rodape">
+            <div id="logo_iff">
+                <a href="http://iff.edu.br">
+                    <img src="{{ MEDIA_URL }}/imagens/logo_iff.gif" style="border:0;width:100px;height:43px" alt="Portal do IFF" title="Portal do IFF" />
+                </a>
+            </div>
             <div id="infos">
                 <div>
-                    NSI - Instituto Federal Fluminense - Núcleo de Pesquisa em Sistemas de Informação
+                    NSI - Núcleo de Pesquisa em Sistemas de Informação - Instituto Federal Fluminense
                 </div>
                 <div id="links_rodape">
                     <a href="/equipe/">Equipe NSI</a> |
