--- a/techtalks/templates/edicao_em_destaque.html
+++ b/techtalks/templates/edicao_em_destaque.html
@@ -19,7 +19,7 @@
 		{% for palestra in edicao.listar_palestras %}
 			<div class="titulo_destaque">{{ palestra.titulo}}</div>
 			<div class="destaque">
-				<div id="dados_palestras">
+				<div class="dados_palestras">
 					<div>Título: <span class="negrito">{{ palestra.titulo }}</span></div>
 					<div>Resumo: <span class="negrito">{{ palestra.resumo|linebreaksbr }}</div>
 					<div>
